<resources>
    <string name="ab_download_later">Update later</string>
    <string name="ab_download_now">Update now</string>
    <string name="ab_install_notification_paused_text">Background installation paused</string>
    <string name="ab_install_notification_text">Background installation</string>
    <string name="ab_restart_fullscreen_text">"You're almost there! It'll only take about 90 seconds to restart your device. The update has been available for %1$d days."</string>
    <string name="ab_restart_text">"You're almost there! It'll only take about 90 seconds to restart your device"</string>
    <string name="ab_restart_warning_os_mr">"Your system update is almost complete.Your device will "</string>
    <string name="ab_restart_warning_smr">"Your security update is almost complete.Your device will "</string>
    <string name="ab_warning_continues">" to complete the update."</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abupdate_in_progress_status">Software update is in progress</string>
    <string name="accept">Accept</string>
    <string name="additional_charges_message">Download will continue on mobile data. Data charges may be applicable.</string>
    <string name="alertSubText">This is used to check, download and install update package</string>
    <string name="alertText">Allow network operations for software updates</string>
    <string name="alertTitle">Updates require the following permission</string>
    <string name="alert_dialog_cancel">Stop installation</string>
    <string name="alert_dialog_continue">Keep installing</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_ok">Got it</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="allocate_space_success">Required memory is available for the update</string>
    <string name="allow">Allow</string>
    <string name="android_latest_sw_text">"You're using the latest software"</string>
    <string name="android_version">Android version:</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Motorola Software Update</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied">On</string>
    <string name="apply_bug_fix">Apply to bug fixes</string>
    <string name="apply_os_update">Apply to all software updates</string>
    <string name="applying_patch">"Applying update (Step %1$d of %2$d)  "</string>
    <string name="are_you_sure">Turn off smart updates?</string>
    <string name="are_you_sure_pop_up_text">Are you sure you want to turn off smart updates?</string>
    <string name="asc_campaign_assigned">Campaign assigned</string>
    <string name="asc_campaign_is_allowed">Firmware Update</string>
    <string name="asc_campaign_is_blocked">Firmware Lock</string>
    <string name="asc_campaign_not_assigned">Device is not currently in a campaign</string>
    <string name="asc_campaign_status_prefix">"
Status: "</string>
    <string name="asc_campaign_window_period_status" formatted="false">"
Update window: From %s to %s"</string>
    <string name="asc_sw_up_to_date">" to latest version"</string>
    <string name="asc_target_version">" to version "</string>
    <string name="auth_title">System update</string>
    <string name="auto_download_cellualr_charges_warn">When downloading updates via mobile network, additional charges may apply</string>
    <string name="auto_download_enable_cellular_future_updates">Do you want to opt-into cellular data option for future downloads too?</string>
    <string name="auto_download_settings_title">Auto-download settings</string>
    <string name="auto_download_wifi_cellular">Auto-download over cellular and Wi-Fi</string>
    <string name="auto_download_wifi_cellular_desc">Automatically download over cellular and Wi-Fi. Wi-Fi will be used first when available.</string>
    <string name="auto_download_wifi_only">Auto-download over Wi-Fi only</string>
    <string name="auto_download_wifi_only_desc">Automatic download over Wi-Fi only</string>
    <string name="auto_install_notification_text">Device will auto install on %1$s</string>
    <string name="auto_time_set">Start at:</string>
    <string name="automatic_bg_install_on_cellular_warning">Because of its importance, this update will install automatically using mobile data on %1$s</string>
    <string name="automatic_download_on_cellular_warning">Because of its importance, this update will download automatically using mobile data on %1$s</string>
    <string name="background_install_msg">This update will continue if you go back or close this window</string>
    <string name="background_install_text">An update is downloading &amp; installing. You can continue using your device.</string>
    <string name="bad_connection">No internet</string>
    <string name="bad_connection_text">Looks like your device currently disconnected with internet. Tap the bottom button to try again.</string>
    <string name="bg_install_cancel_confirm">Are you sure you want to stop the installation?</string>
    <string name="bg_retried">The software download has been interrupted. We’ll keep trying…</string>
    <string name="bg_suspended">Waiting for a data connection to resume background download and installation</string>
    <string name="bg_suspended_non_adminapn">Waiting for Wi-Fi or Zero Rated network to resume background download and installation…</string>
    <string name="bg_suspended_roaming">Background installation paused due to roaming network, please turn on Wi-Fi to resume background installation.</string>
    <string name="bg_suspended_wifi">Waiting for Wi-Fi to resume background download and installation</string>
    <string name="bootloader_unlock_msg">Your device is no longer receiving updates and may be prone to security risks.</string>
    <string name="bootloader_unlock_title">No available updates</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download_notification">Cancel</string>
    <string name="cancel_install">Cancel</string>
    <string name="cancel_update_notification">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_for_updates_title">Check for updates</string>
    <string name="check_update_badparam">"The upgrade attempt has encountered an error due to failed log in.

Please try again later."</string>
    <string name="check_update_checking">Checking for updates…</string>
    <string name="check_update_disabled_admin">Device updates controlled by IT admin</string>
    <string name="check_update_downloading">"An update is currently being downloaded.

You will be notified when the download is complete."</string>
    <string name="check_update_fail">"An unexpected error has occurred.

Device will retry for an update in background."</string>
    <string name="check_update_internal">Unable to check for updates. Try again later.</string>
    <string name="check_update_net">Please check your internet connection and try again</string>
    <string name="continue_button">Continue</string>
    <string name="critical_restart_message_popup">"To apply this important update, please restart as soon as possible. If you can't, your device will automatically restart on %1$s."</string>
    <string name="current_version">Current software version:</string>
    <string name="custom_time">Custom time</string>
    <string name="dash">—</string>
    <string name="deny">Deny</string>
    <string name="dl_options_mobile_only_warning">"Using Wi-Fi is recommended. Downloading with mobile data or using mobile data while roaming may result in additional charges.

Downloading this software won't impact the operation of your device."</string>
    <string name="download_options">Download options</string>
    <string name="got_it">Got it</string>
    <string name="not_now">Not now</string>
    <string name="picker_cell_radio">Wi-Fi and mobile data</string>
    <string name="picker_title">"Choose how you'd like to download this update:"</string>
    <string name="picker_wifi_only_radio">Wi-Fi only</string>
    <string name="restart_postponed">Restart postponed</string>
    <string name="security_patch">Security patch:</string>
    <string name="smart_end_time">End</string>
    <string name="smart_start_time">Start</string>
    <string name="smart_update_advanced">Advanced</string>
    <string name="smart_update_note">For your safety, all important security updates will download automatically whether this feature is on or off</string>
    <string name="smart_update_pop_up_text">Keep your device safe and secure with automatic updates</string>
    <string name="smart_update_text_AB">Help your device run safely and efficiently by automatically installing all new security updates and bug fixes.</string>
    <string name="smart_update_time_slot_text_AB">Choose a start time</string>
    <string name="smart_update_title">Smart updates</string>
    <string name="try_again">Try again</string>
    <string name="turn_on_smart_updates">Turn on smart updates</string>
    <string name="upto_date_title">Everything looks good!</string>
    <string name="use_smart_updates">Use Smart Updates</string>
</resources>