<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/software_upto_date_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/paragraph_spacing" android:layout_marginEnd="@dimen/paragraph_spacing"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.airbnb.lottie.LottieAnimationView android:id="@id/lottieCheckMark" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vital_updates_progressbar_padding_top" android:adjustViewBounds="true" />
    <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginBottom="@dimen/activity_right_margin" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/title_text" android:gravity="center" android:id="@id/uptodate" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/upto_date_title" android:layout_marginStart="@dimen/list_starting_padding_top" android:layout_marginEnd="@dimen/list_starting_padding_top" style="@style/TextAppearance.HeadingStyle" />
            <TextView android:textSize="@dimen/upto_date_text" android:gravity="center" android:id="@id/txtLatestSW" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_starting_padding_top" android:text="@string/android_latest_sw_text" android:lineSpacingMultiplier="1.25" style="@style/TextAppearance.MaterialComponents.Body2" />
            <TextView android:id="@id/android_version" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_icon_margin_end" android:text="@string/android_version" android:layout_marginStart="@dimen/menu_icon_margin_end" android:layout_marginEnd="@dimen/menu_icon_margin_end" style="@style/TextAppearance.MaterialComponents.Body2" />
            <TextView android:id="@id/build_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_version" android:layout_marginStart="@dimen/menu_icon_margin_end" android:layout_marginEnd="@dimen/menu_icon_margin_end" style="@style/TextAppearance.MaterialComponents.Body2" />
            <TextView android:id="@id/security_patch" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/security_patch" android:layout_marginStart="@dimen/menu_icon_margin_end" android:layout_marginEnd="@dimen/menu_icon_margin_end" style="@style/TextAppearance.MaterialComponents.Body2" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton android:gravity="center" android:layout_gravity="end|bottom" android:id="@id/btnDone" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/got_it" app:cornerRadius="@dimen/button_corner_radius" style="@style/MaterialButtonColoredStyle" />
    <RelativeLayout android:orientation="vertical" android:id="@id/bottomSheet" android:background="@drawable/rounded_corner" android:paddingTop="@dimen/bottom_sheet_margin_top" android:paddingBottom="@dimen/layout_margin_bottom" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/activity_left_margin" android:paddingEnd="@dimen/activity_right_margin">
        <TextView android:textColor="@color/background_color" android:id="@id/bottom_sheet_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/smart_update_pop_up_text" style="@style/TextAppearance.MaterialComponents.Body2" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bottom_sheet_button_margin_top" android:layout_below="@id/bottom_sheet_text" android:layout_alignParentEnd="true">
            <Button android:id="@id/btnNotNow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/not_now" style="@style/MaterialButtonNoBGStyleBottomSheet" />
            <Button android:id="@id/btnTurnOn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/turn_on_smart_updates" style="@style/MaterialButtonNoBGStyleBottomSheet" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
