<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center_vertical" android:id="@id/imgBack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_ab_back_material" android:tint="@color/black" android:paddingHorizontal="@dimen/heading_margin_menu" android:paddingVertical="@dimen/heading_margin_menu" />
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/scrollbar_size">
            <TextView android:textAppearance="@style/TextAppearance.HeadingStyle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_top" android:text="@string/smart_update_title" android:layout_marginStart="@dimen/button_corner_radius" />
            <TextView android:id="@id/smartUpdateText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/smart_update_text_AB" android:layout_marginStart="@dimen/button_corner_radius" android:layout_marginEnd="@dimen/menu_icon_margin_end" style="@style/MenuStatusTitleTheme" />
            <LinearLayout android:orientation="horizontal" android:id="@id/lnrSmartUpdateSwitch" android:background="@drawable/smart_updates_bg" android:padding="@dimen/heading_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_right" android:layout_marginHorizontal="@dimen/button_corner_radius">
                <TextView android:textStyle="bold" android:textColor="@color/switch_track_stroke_color_off_disabled" android:layout_gravity="center_vertical" android:id="@id/useSmartUpdates" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_smart_updates" android:layout_weight="1.0" style="@style/TextAppearance.Medium" />
                <Switch android:layout_gravity="center_vertical" android:id="@id/switchSmartUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/thumb_background" android:layout_weight="0.0" android:track="@drawable/track_background" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_corner_radius" android:layout_marginHorizontal="@dimen/vital_updates_body_margin_top">
                <TextView android:textStyle="bold" android:textColor="@color/switch_track_stroke_color_off_disabled" android:id="@id/timeSlotText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_update_time_slot_text_AB" android:layout_marginEnd="@dimen/list_group_padding_top" />
                <View android:layout_gravity="center_vertical" android:background="?android:dividerVertical" android:layout_width="match_parent" android:layout_height="1.0dp" />
            </LinearLayout>
            <RadioGroup android:theme="@style/TextAppearance.RadioButton" android:orientation="vertical" android:id="@id/radioGroupTimeSlot" android:paddingTop="@dimen/button_corner_radius" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/button_corner_radius">
                <RadioButton android:id="@id/radioSlot1" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/heading_margin_menu" />
                <RadioButton android:id="@id/radioSlot2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/heading_margin_menu" android:paddingStart="@dimen/heading_margin_menu" />
                <RadioButton android:id="@id/radioSlot3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/heading_margin_menu" android:paddingStart="@dimen/heading_margin_menu" />
                <RadioButton android:id="@id/radioSlotCustom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/heading_margin_menu" android:text="@string/custom_time" android:paddingStart="@dimen/heading_margin_menu" />
            </RadioGroup>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_item_padding_bottom" android:layout_marginHorizontal="@dimen/button_corner_radius">
                <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black" android:id="@id/edtStartTimeLt" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/smart_start_time" android:layout_weight="0.5" app:boxStrokeColor="@color/black" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <EditText android:textColor="@color/switch_track_stroke_color_off_disabled" android:id="@id/edtStartTimeEd" android:layout_width="match_parent" android:layout_height="wrap_content" android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView android:textColor="@color/switch_track_stroke_color_off_disabled" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dash" android:textAlignment="center" android:layout_marginHorizontal="@dimen/layout_margin_right" />
                <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black" android:id="@id/txtEndTimeLt" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/smart_end_time" android:layout_weight="0.5" app:boxStrokeColor="@color/black" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <EditText android:textColor="@color/switch_track_stroke_color_off_disabled" android:id="@id/edtEndTimeEd" android:layout_width="match_parent" android:layout_height="wrap_content" android:editable="false" android:textCursorDrawable="@null" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <View android:layout_gravity="center_vertical" android:id="@id/dash_line" android:background="?android:dividerVertical" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="@dimen/button_corner_radius" android:layout_marginHorizontal="@dimen/button_corner_radius" />
            <Button android:gravity="start|center" android:id="@id/advanceOptions" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/paragraph_spacing" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/smart_update_advanced" android:drawablePadding="@dimen/drawablePadding" android:drawableStart="@drawable/ic_arrow_drop_down_black_24dp" android:layout_marginStart="@dimen/vital_updates_body_margin_top" style="@style/TextAppearance.Primary" />
            <Switch android:layout_gravity="center_vertical" android:id="@id/enableUpdateTypeSwitch" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_left_padding" android:text="@string/apply_bug_fix" android:layout_marginStart="@dimen/button_corner_radius" android:layout_marginEnd="@dimen/drawablePadding" android:textFontWeight="@integer/sub_heading_weight" style="@style/Switch.Settings" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_left_padding">
                <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_info_black_24dp" android:layout_marginHorizontal="@dimen/button_width_padding" />
            </LinearLayout>
            <TextView android:textSize="@dimen/sub_text" android:id="@id/smartUpdateNote" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/button_left_padding" android:text="@string/smart_update_note" android:layout_marginHorizontal="@dimen/vital_updates_body_margin_top" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
