<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="@dimen/activity_left_margin" android:layout_marginEnd="@dimen/activity_right_margin"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.airbnb.lottie.LottieAnimationView android:id="@id/lottieAlertMark" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/error_margin" android:adjustViewBounds="true" />
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginBottom="@dimen/activity_left_margin" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/title_text" android:gravity="center" android:id="@id/txtBadConnHeader" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/bad_connection" style="@style/TextAppearance.HeadingStyle" />
        <TextView android:gravity="center" android:id="@id/txtBadConnBody" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/list_starting_padding_top" android:text="@string/bad_connection_text" android:lineSpacingMultiplier="1.25" android:paddingStart="@dimen/drawablePadding" android:paddingEnd="@dimen/drawablePadding" style="@style/TextAppearance.MaterialComponents.Body1" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton android:gravity="center" android:layout_gravity="end|bottom" android:id="@id/btnRetry" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/try_again" app:cornerRadius="@dimen/button_corner_radius" style="@style/MaterialButtonColoredStyle" />
</LinearLayout>
